# cloud-compliance-automation-framework

./: .gitignore  Makefile  README.md  architecture.dot  pyproject.toml  requirements.txt  setup_and_push.sh
.github/workflows/: ci-cd.yml
config/environments/: local.yaml
config/policies/: aws_s3_policy.yaml
data/samples/: s3_compliant.json  s3_non_compliant.json
docs/: compliance_mapping.md
docs/runbooks/: handle_non_compliant_resource.md
infrastructure/terraform/: dynamodb.tf  eventbridge.tf  iam.tf  lambda.tf  main.tf  variables.tf
monitoring/grafana/: compliance_dashboard.json
scripts/: master.sh  phase1_setup.sh  phase2_setup.sh  phase3_setup.sh  phase4_setup.sh  phase5_setup.sh
scripts/deployment/: build_lambda_package.sh  deploy.sh
scripts/monitoring/: generate_report.py
src/: __init__.py  config.py  logger.py  policy_engine_demo.py
src/config/policies/: aws_cloudwatch_logs.yaml  aws_iam_baseline.yaml  aws_kms_baseline.yaml  aws_logging_detection.yaml  aws_networking_baseline.yaml  aws_s3_baseline.yaml  aws_storage_database.yaml
src/lambda_functions/compliance_evaluator/: handler.py  resource_fetcher.py
src/policy_engine/: __init__.py  engine.py  evaluator.py  loader.py  models.py
src/remediation_engine/: __init__.py  actions.py  handler.py
src/utils/: policy_helpers.py
tests/: __init__.py  test_basic.py
tests/policy_engine/: __init__.py  test_policy_engine.py
